# lib-text-loading-animation-rust

./: .gitignore  Cargo.toml  readme.md
calling-from-c-examples/: Makefile  main.c  readme.md  run.sh
calling-from-c-examples/unix/: main.c  readme.md
calling-from-c-examples/windows/: .gitignore  CMakeLists.txt  build.bat  build_and_run.bat  main.c  readme.md
src/: lib.rs
